serving/minimal-example-shadow-deployment/istio/mirrored-inference-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: mirrored-inference
spec:
  gateways:
  - istio-system/cluster-local-gateway
  hosts:
  # Update hostname to match your deployment
  - <domain.example.com>
  http:
  - match:
    # Update <namespace> to match your deployment
    - uri:
        prefix: /serving/<namespace>/mirrored-inference/
    - uri:
        exact: /serving/<namespace>/mirrored-inference
    mirror:
      # Istio will append "-shadow" to the Host header on the mirrored copy,
      # which causes mirrored-traffic-redirect-virtual-service.yaml to intercept
      # it and forward it to the shadow ISVC
      host: cluster-local-gateway.istio-system.svc.cluster.local
    mirrorPercentage:
      value: 100
    # Update <namespace> to match your deployment
    rewrite:
      uri: /serving/<namespace>/double-minimal-custom-inference/
    route:
    - destination:
        host: cluster-local-gateway.istio-system.svc.cluster.local
        port:
          number: 80
