serving/minimal-example-shadow-deployment/istio/mirrored-traffic-redirect-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mirror-traffic-redirect
spec:
  hosts:
  # Update hostname to match your deployment
  - <domain.example.com>
  gateways:
  - istio-system/cluster-local-gateway
  http:
  - match:
    # Update <namespace> to match your deployment
    - uri:
        prefix: /serving/<namespace>/double-minimal-custom-inference/
    - uri:
        exact: /serving/<namespace>/double-minimal-custom-inference
    # Update <namespace>to match your deployment
    rewrite:
      uri: /serving/<namespace>/triple-minimal-custom-inference/
    headers:
      request:
        set:
          # Update hostname to match your deployment
          Host: <domain.example.com>
    route:
    - destination:
        host: cluster-local-gateway.istio-system.svc.cluster.local
        port:
          number: 80
